--- a/apputveckling/src/main/webapp/includes/loggedinpage.xhtml
+++ b/apputveckling/src/main/webapp/includes/loggedinpage.xhtml
@@ -7,5 +7,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <f:view>
     <h:outputLabel value="congratts! "/>
+    <h:outputText value="User ID: #{signup.name}" />
+
 </f:view>
 </html>
