--- a/apputveckling/src/main/webapp/includes/editCase.xhtml
+++ b/apputveckling/src/main/webapp/includes/editCase.xhtml
@@ -1,20 +1,23 @@
-<!-- editCase.xhtml -->
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-    <title>Edit Case</title>
+    <title>Case Details</title>
 </h:head>
 
 <h:body>
     <h:form>
-        <!-- Add input fields for each case property -->
-        <h:inputText value="#{editCaseBean.editCaseDesc}" />
-        <h:inputText value="#{editCaseBean.editCaseStatus}" />
+        <h2>Client Details</h2>
+        <h:outputText value="Case ID: #{casesBean.caseToEdit.CASE_ID}" />
+        <h:outputText value="Case desc: #{casesBean.caseToEdit.CASE_DESC}" />
 
-        <h:commandButton value="Update" action="#{editCaseBean.updateCase}" />
+        <br/>
     </h:form>
 </h:body>
 </html>
