more work on editcase needs final style changes

--- a/apputveckling/src/main/webapp/includes/cassesContent.xhtml
+++ b/apputveckling/src/main/webapp/includes/cassesContent.xhtml
@@ -9,6 +9,7 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 <head>
+   <h:outputScript library="js" name="cases.js"></h:outputScript>
 
    <title>Work Cases</title>
    <style>
