client kalender uppdateras inte
Co-Authored-By: local_tweekerz <94663534+LocalTweekez@users.noreply.github.com>
Co-Authored-By: Taha Khudher <94954585+TahaKhudher@users.noreply.github.com>

--- a/apputveckling/src/main/webapp/assets/styles.css
+++ b/apputveckling/src/main/webapp/assets/styles.css
@@ -109,3 +109,10 @@
 .client-calendar-selectTimeDiv {
     width: 100%;
 }
+
+.client-calendar-selectDayEvents {
+    border-radius: 5px;
+    background-color: darkgreen;
+    text-align: center;
+    padding-top: 2px;
+}
