--- a/apputveckling/src/main/webapp/includes/client_inc/clientCalendar.xhtml
+++ b/apputveckling/src/main/webapp/includes/client_inc/clientCalendar.xhtml
@@ -1,35 +1,50 @@
 <div xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
+     xmlns:h="http://xmlns.jcp.org/jsf/html"
+     xmlns:f="http://xmlns.jcp.org/jsf/core"
+     xmlns:p="http://primefaces.org/ui" xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-<h:head>
-    <title>Schemaläggning</title>
-</h:head>
-<h:body>
-    <div class="card">
-        <div class="d-flex flex-row">
+    <h:head>
+        <title>Schemaläggning</title>
+    </h:head>
+    <h:body>
+        <div class="container-fluid">
+
             <h:form>
-                <div class="p-2">
+                <div class="row">
+                    <div class="p-2 col-4">
                         <p:growl id="messages" showDetail="true" escape="false"/>
-
                         <h:panelGrid columns="1" cellpadding="5">
                             <p:outputLabel for="calendarClient" value="Select your date"/>
                             <p:datePicker id="calendarClient" value="#{calendarApplication.date}"
                                           inline="true"
-                                          disabledDays="${eventEntityBean.time_from}">
-                                <p:ajax event="dateSelect" listener="#{calendarApplication.onDateSelect}"/>
+                                          disabledDays="${[6,7]}"
+                                          disabledDates="${calendarApplication.invalidDates}">
+                                <p:ajax event="dateSelect" listener="#{calendarApplication.onDateSelect}"
+                                        update="messages"/>
+
                             </p:datePicker>
                         </h:panelGrid>
-                </div>
-                <div class="p-2 client-calendar-selectTimeDiv">
-                    <h2>
-                        <h:outputText id="calendarDateSelectHeader" value="#{calendarApplication.headerDate}"/>
-                    </h2>
+                    </div>
+                    <div class=" col-4 p-2 client-calendar-selectTimeDiv">
+                        <h:panelGrid id="message">
+                            <h2>
+                                <h:outputText id="calendarDateSelectHeader" value="#{calendarApplication.headerDate}"/>
+                            </h2>
+                            <div>
+                                <ui:repeat value="#{calendarApplication.events}" var="ent">
+                                    <p:outputPanel>
+                                        <div class="client-calendar-selectDayEvents">
+                                            <h6 style="color: white">#{ent.start_date} - #{ent.end_date}</h6>
+                                        </div>
+                                    </p:outputPanel>
+                                </ui:repeat>
+
+                            </div>
+                        </h:panelGrid>
+                    </div>
                 </div>
             </h:form>
-        </div>
 
-    </div>
-</h:body>
+        </div>
+    </h:body>
 </div>
